--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body
 {
+    color:blue;
     text-align: center;
     font-family: "Arial";
-    color: #333333;
     font-size: 16px;
     margin: 0;
     padding: 0;
